# kinect_robot

./: CMakeLists.txt  README.md  package.xml
launch/: enable_env.launch  pcl_process.launch
src/: cluster.cpp  clustering.cpp  eclidean.cpp  filter.cpp  identify_ground.cpp  ransac.cpp  segmen.cpp  segmen.py
